--- a/nais-dev.yaml
+++ b/nais-dev.yaml
@@ -41,13 +41,8 @@ spec:
     - name: LOGINSERVICE_URL
       value: "https://loginservice.dev.nav.no/login"
     - name: LOGINSERVICE_REDIRECT_URL
-      value: "https://www-gcp.dev.nav.no/syk/sykefravaer"
-    - name: SYKEPENGESOKNAD_URL
-      value: "https://www-gcp.dev.nav.no/syk/sykepengesoknad"
-    - name: SPINNSYN_URL
-      value: "https://www-gcp.dev.nav.no/syk/sykepenger"
-    - name: SYKMELDING_URL
-      value: "https://www-gcp.dev.nav.no/syk/sykmeldinger"
+      value: "https://www-gcp.dev.nav.no/syk/info/snart-slutt-pa-sykepengene"
+
     - name: AKTIVITETSPLAN_URL
       value: "https://aktivitetsplan-q1.dev.nav.no/"
     - name: OPPFOLGINGSPLAN_URL
