--- a/nais-labs.yaml
+++ b/nais-labs.yaml
@@ -25,6 +25,8 @@ spec:
       value: "https://loginservice-q.nav.no/login"
     - name: DITTNAV_URL
       value: "https://www.nav.no/person/dittnav"
+    - name: DITT_SYKEFRAVAER_URL
+      value: "https://ditt-sykefravaer.labs.nais.io/syk/sykefravaer"
     - name: ARBEIDSSOKERREGISTRERING_URL
       value: "https://arbeidssokerregistrering.nav.no/start?fraSykefravaer=true"
     - name: DECORATOR_ENV
