--- a/nais-dev.yaml
+++ b/nais-dev.yaml
@@ -36,23 +36,14 @@ spec:
       value: "https://sykmelding-gateway.dev.nav.no/sykmeldinger-backend"
     - name: FLEX_GATEWAY_ROOT
       value: "https://flex-gateway.dev.nav.no"
-    - name: SYFOAPI_ROOT
-      value: "https://syfoapi-sky.dev.nav.no"
     - name: LOGINSERVICE_URL
       value: "https://loginservice.dev.nav.no/login"
     - name: LOGINSERVICE_REDIRECT_URL
       value: "https://www-gcp.dev.nav.no/syk/info/snart-slutt-pa-sykepengene"
-
-    - name: AKTIVITETSPLAN_URL
-      value: "https://aktivitetsplan-q1.dev.nav.no/"
-    - name: OPPFOLGINGSPLAN_URL
-      value: "https://www-gcp.dev.nav.no/syk/oppfolgingsplan"
-    - name: DIALOGMOTE_URL
-      value: "https://www-gcp.dev.nav.no/syk/dialogmote"
-    - name: NEW_DIALOGMOTE_URL
-      value: "https://www-gcp.dev.nav.no/syk/dialogmoter/sykmeldt"
     - name: DITTNAV_URL
       value: "https://www.dev.nav.no/person/dittnav/"
+    - name: DITT_SYKEFRAVAER_URL
+      value: "https://www-gcp.dev.nav.no/syk/sykefravaer"
     - name: NARMESTELEDER_URL
       value: "https://narmesteleder.dev.nav.no"
     - name: ARBEIDSSOKERREGISTRERING_URL
