--- a/nais-prod.yaml
+++ b/nais-prod.yaml
@@ -42,6 +42,8 @@ spec:
       value: "https://www.nav.no/syk/info/snart-slutt-pa-sykepengene"
     - name: DITTNAV_URL
       value: "https://www.nav.no/person/dittnav"
+    - name: DITT_SYKEFRAVAER_URL
+      value: "https://www.nav.no/syk/sykefravaer"
     - name: NARMESTELEDER_URL
       value: "https://narmesteleder.nav.no"
     - name: ARBEIDSSOKERREGISTRERING_URL
