--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -89,7 +89,7 @@ jobs:
           RESOURCE: nais-dev.yaml
 
   deploy-to-prod-gcp:
-    if: github.ref == 'refs/heads/master'
+    if: github.ref == 'refs/heads/master-fjern-meg'
     name: Deploy to prod-gcp
     needs: build-and-publish
     runs-on: ubuntu-latest
