--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -56,6 +56,8 @@ jobs:
           path: cypress/screenshots
       - name: Bygg og push Docker image
         if: github.ref == 'refs/heads/master' || startsWith(github.ref, 'refs/heads/dev-')  || startsWith(github.ref, 'refs/heads/labs-')
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           docker build -t ${IMAGE} .
           echo ${GITHUB_TOKEN} | docker login ghcr.io --username ${GITHUB_REPOSITORY} --password-stdin
