--- a/nais-prod.yaml
+++ b/nais-prod.yaml
@@ -10,6 +10,12 @@ spec:
   port: 8080
   ingresses:
     - "https://www.nav.no/syk/info"
+  idporten:
+    enabled: true
+    sidecar:
+      enabled: true
+      level: Level4
+      autoLogin: true
   replicas:
     min: 2
     max: 3
