--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ SYKEFRAVAER_URL=https://www-gcp.dev.nav.no/syk/sykefravaer
 DITTNAV_URL=https://www.dev.nav.no/person/dittnav/
 DITT_SYKEFRAVAER_URL=https://ditt-sykefravaer.labs.nais.io/syk/sykefravaer
 DECORATOR_ENV=prod
+ARBEIDSSOKERREGISTRERING_URL=https://arbeidssokerregistrering.nav.no/start?fraSykefravaer=true
