Update 39u info page. Add fetch of maxdate

--- a/.env
+++ b/.env
@@ -6,3 +6,4 @@ DITTNAV_URL=https://www.dev.nav.no/person/dittnav/
 DITT_SYKEFRAVAER_URL=https://ditt-sykefravaer.labs.nais.io/syk/sykefravaer
 DECORATOR_ENV=prod
 ARBEIDSSOKERREGISTRERING_URL=https://arbeidssokerregistrering.nav.no/start?fraSykefravaer=true
+ESYFOVARSEL_HOST=https://esyfovarsel.dev.intern.nav.no
