--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@navikt/ds-css": "^0.17.1",
-    "@navikt/ds-react": "^0.18.5",
-    "@navikt/ds-tokens": "^0.9.0",
+    "@navikt/ds-css": "1.3.5",
+    "@navikt/ds-react": "1.3.5",
+    "@navikt/ds-tokens": "1.3.5",
+    "@navikt/ds-icons": "1.3.5",
     "@navikt/nav-dekoratoren-moduler": "^1.6.9",
     "amplitude-js": "^8.18.1",
     "classnames": "^2.3.1",
