--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@navikt/ds-css": "1.3.5",
-    "@navikt/ds-react": "1.3.5",
-    "@navikt/ds-tokens": "1.3.5",
-    "@navikt/ds-icons": "1.3.5",
-    "@navikt/nav-dekoratoren-moduler": "^1.6.9",
+    "@navikt/ds-css": "^2.0.1",
+    "@navikt/ds-react": "^2.0.1",
+    "@navikt/ds-tokens": "^2.0.1",
+    "@navikt/ds-icons": "^2.0.1",
+    "@navikt/nav-dekoratoren-moduler": "^1.8.1",
     "amplitude-js": "^8.18.1",
     "classnames": "^2.3.1",
     "dayjs": "^1.11.1",
