--- a/nais-prod.yaml
+++ b/nais-prod.yaml
@@ -10,6 +10,8 @@ spec:
   port: 8080
   ingresses:
     - "https://www.nav.no/syk/info"
+  tokenx:
+    enabled: true
   idporten:
     enabled: true
     sidecar:
@@ -42,10 +44,6 @@ spec:
       value: "https://sykmelding-gateway.nav.no/sykmeldinger-backend"
     - name: FLEX_GATEWAY_ROOT
       value: "https://flex-gateway.nav.no"
-    - name: LOGINSERVICE_URL
-      value: "https://loginservice.nav.no/login"
-    - name: LOGINSERVICE_REDIRECT_URL
-      value: "https://www.nav.no/syk/info/snart-slutt-pa-sykepengene"
     - name: DITTNAV_URL
       value: "https://www.nav.no/person/dittnav"
     - name: DITT_SYKEFRAVAER_URL
@@ -56,9 +54,17 @@ spec:
       value: "https://arbeidssokerregistrering.nav.no/start?fraSykefravaer=true"
     - name: ESYFOVARSEL_HOST
       value: "https://esyfovarsel.intern.nav.no"
+    - name: ESYFOVARSEL_CLIENT_ID
+      value: "prod-gcp:team-esyfo:esyfovarsel"
     - name: DECORATOR_ENV
       value: "prod"
     - name: AMPLITUDE_ENABLED
       value: "true"
     - name: VEILARBOPPFOLGING_HOST
       value: "veilarboppfolging.prod-fss-pub.nais.io"
+  accessPolicy:
+    outbound:
+      rules:
+        - application: esyfovarsel
+        - application: veilarboppfolging
+          namespace: pto
