--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-query": "^3.38.1",
-    "typescript": "~4.6.4"
+    "typescript": "~4.6.4",
+    "openid-client": "^5.1.9"
   },
   "devDependencies": {
     "@cypress/webpack-preprocessor": "^5.11.1",
