--- a/nais-labs.yaml
+++ b/nais-labs.yaml
@@ -26,7 +26,7 @@ spec:
     - name: DITT_SYKEFRAVAER_URL
       value: "https://ditt-sykefravaer.labs.nais.io/syk/sykefravaer"
     - name: ARBEIDSSOKERREGISTRERING_URL
-      value: "https://arbeidssokerregistrering.nav.no/start?fraSykefravaer=true"
+      value: "https://arbeid.dev.nav.no/arbeid/registrering"
     - name: ESYFOVARSEL_HOST
       value: "https://esyfovarsel.dev.intern.nav.no"
     - name: DECORATOR_ENV
