--- a/nais-dev.yaml
+++ b/nais-dev.yaml
@@ -10,6 +10,8 @@ spec:
   port: 8080
   ingresses:
     - "https://www-gcp.dev.nav.no/syk/info"
+  tokenx:
+    enabled: true
   idporten:
     enabled: true
     sidecar:
@@ -40,10 +42,6 @@ spec:
       value: "false"
     - name: FLEX_GATEWAY_ROOT
       value: "https://flex-gateway.dev.nav.no"
-    - name: LOGINSERVICE_URL
-      value: "https://loginservice.dev.nav.no/login"
-    - name: LOGINSERVICE_REDIRECT_URL
-      value: "https://www-gcp.dev.nav.no/syk/info/snart-slutt-pa-sykepengene"
     - name: DITTNAV_URL
       value: "https://www.dev.nav.no/person/dittnav/"
     - name: DITT_SYKEFRAVAER_URL
@@ -51,12 +49,22 @@ spec:
     - name: NARMESTELEDER_URL
       value: "https://narmesteleder.dev.nav.no"
     - name: ARBEIDSSOKERREGISTRERING_URL
-      value: "https://arbeidssokerregistrering-q1.nav.no/start?fraSykefravaer=true"
+      value: "https://arbeid.dev.nav.no/arbeid/registrering"
     - name: ESYFOVARSEL_HOST
       value: "https://esyfovarsel.dev.intern.nav.no"
+    - name: ESYFOVARSEL_CLIENT_ID
+      value: "dev-gcp:team-esyfo:esyfovarsel"
+    - name: VEILARBOPPFOLGING_CLIENT_ID
+      value: "dev-fss:pto:veilarboppfolging"
     - name: DECORATOR_ENV
       value: "dev"
     - name: AMPLITUDE_ENABLED
       value: "true"
     - name: VEILARBOPPFOLGING_HOST
       value: "veilarboppfolging.dev-fss-pub.nais.io"
+  accessPolicy:
+    outbound:
+      rules:
+        - application: esyfovarsel
+        - application: veilarboppfolging
+          namespace: pto
