--- a/nais-demo.yaml
+++ b/nais-demo.yaml
@@ -1,7 +1,7 @@
 apiVersion: "nais.io/v1alpha1"
 kind: "Application"
 metadata:
-  name: esyfo-info-frontend
+  name: esyfo-info-frontend-demo
   namespace: team-esyfo
   labels:
     team: team-esyfo
