--- a/nais-prod.yaml
+++ b/nais-prod.yaml
@@ -40,8 +40,6 @@ spec:
       value: "prod"
     - name: OPPLAERING
       value: "false"
-    - name: FLEX_GATEWAY_ROOT
-      value: "https://flex-gateway.nav.no"
     - name: DITTNAV_URL
       value: "https://www.nav.no/person/dittnav"
     - name: DITT_SYKEFRAVAER_URL
@@ -71,3 +69,4 @@ spec:
           namespace: pto
       external:
         - host: www.nav.no
+        - host: veilarboppfolging.prod-fss-pub.nais.io
