--- a/nais-dev.yaml
+++ b/nais-dev.yaml
@@ -40,8 +40,6 @@ spec:
       value: "q1"
     - name: OPPLAERING
       value: "false"
-    - name: FLEX_GATEWAY_ROOT
-      value: "https://flex-gateway.dev.nav.no"
     - name: DITTNAV_URL
       value: "https://www.dev.nav.no/person/dittnav/"
     - name: DITT_SYKEFRAVAER_URL
@@ -71,4 +69,5 @@ spec:
           namespace: pto
       external:
         - host: dekoratoren.dev.nav.no
-        - host: dekoratoren.ekstern.dev.nav.no  # for dev
+        - host: dekoratoren.ekstern.dev.nav.no
+        - host: veilarboppfolging.dev-fss-pub.nais.io
