--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -14,8 +14,8 @@ jobs:
       - name: Setup node
         uses: actions/setup-node@v3
         with:
-          node-version: '16'
-          registry-url: 'https://npm.pkg.github.com'
+          node-version: "16"
+          registry-url: "https://npm.pkg.github.com"
       - name: Cache Cypress binary
         uses: actions/cache@v3
         with:
