--- a/package.json
+++ b/package.json
@@ -4,20 +4,22 @@
   "private": true,
   "dependencies": {
     "@navikt/ds-css": "^2.0.1",
+    "@navikt/ds-icons": "^2.0.1",
     "@navikt/ds-react": "^2.0.1",
     "@navikt/ds-tokens": "^2.0.1",
-    "@navikt/ds-icons": "^2.0.1",
     "@navikt/nav-dekoratoren-moduler": "^1.8.1",
+    "@navikt/next-logger": "^1.18.0",
     "amplitude-js": "^8.18.1",
+    "axios": "^1.4.0",
     "classnames": "^2.3.1",
     "dayjs": "^1.11.1",
     "html-react-parser": "^1.4.12",
-    "pino": "^7.11.0",
+    "openid-client": "^5.1.9",
+    "pino": "^8.14.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-query": "^3.38.1",
-    "typescript": "~4.6.4",
-    "openid-client": "^5.1.9"
+    "typescript": "~4.6.4"
   },
   "devDependencies": {
     "@cypress/webpack-preprocessor": "^5.11.1",
