--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,13 +1,15 @@
 name: Push
 on: push
 env:
-  APP: esyfo-info-frontend
-  branchname: ${{ github.ref_name }}
   NPM_AUTH_TOKEN: ${{ secrets.READER_TOKEN }}
 jobs:
   build-and-publish:
     name: Bygg, test og push Docker image
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      id-token: write
+      packages: write
     steps:
       - name: Checkout code
         uses: actions/checkout@v1
@@ -23,19 +25,6 @@ jobs:
           key: cypress-${{ runner.os }}-cypress-pr-${{ hashFiles('**/package.json') }}
           restore-keys: |
             cypress-${{ runner.os }}-cypress-
-      - name: Generer versjon og image navn
-        run: |
-          TIME=$(TZ="Europe/Oslo" date +%Y.%m.%d-%H.%M)
-          COMMIT=$(git rev-parse --short=8 HEAD)
-          VERSION=$TIME-$COMMIT
-          echo "IMAGE=ghcr.io/navikt/$APP:$VERSION" >> $GITHUB_ENV
-          echo "VERSION=$VERSION" >> $GITHUB_ENV
-      - run: echo $VERSION > VERSION.txt
-      - name: Last opp VERSION til neste job
-        uses: actions/upload-artifact@v1
-        with:
-          name: VERSION.txt
-          path: VERSION.txt
       - name: Install npm dependencies
         run: npm ci
       - name: Run prettier
@@ -67,65 +56,41 @@ jobs:
       image: ${{ steps.docker-build-push.outputs.image }}
 
   deploy-to-dev-gcp:
-    if: github.ref == 'refs/heads/master' || startsWith(github.ref, 'refs/heads/dev-')
+    if: github.ref == 'refs/heads/master'
     name: Deploy to dev-gcp
-    needs: build-and-publish
+    needs: build
     runs-on: ubuntu-latest
-    concurrency: deploy-to-dev-gcp
     steps:
-      - uses: actions/checkout@v1
-      - uses: actions/download-artifact@v1
-        with:
-          name: VERSION.txt
-          path: .
-      - run: echo "VERSION=`cat VERSION.txt`" >> $GITHUB_ENV
-      - run: echo "IMAGE=ghcr.io/navikt/$APP:$VERSION" >> $GITHUB_ENV
-      - name: Deploy to dev-gcp
-        uses: nais/deploy/actions/deploy@v1
+      - uses: actions/checkout@v3
+      - uses: nais/deploy/actions/deploy@v1
         env:
           APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
           CLUSTER: dev-gcp
-          RESOURCE: nais-dev.yaml
+          RESOURCE: naiserator-dev.yaml
           VAR: image=${{ needs.build.outputs.image }}
 
   deploy-to-prod-gcp:
     if: github.ref == 'refs/heads/master'
     name: Deploy to prod-gcp
-    needs: build-and-publish
+    needs: build
     runs-on: ubuntu-latest
-    concurrency: deploy-to-prod-gcp
     steps:
-      - uses: actions/checkout@v1
-      - uses: actions/download-artifact@v1
-        with:
-          name: VERSION.txt
-          path: .
-      - run: echo "VERSION=`cat VERSION.txt`" >> $GITHUB_ENV
-      - run: echo "IMAGE=ghcr.io/navikt/$APP:$VERSION" >> $GITHUB_ENV
-      - name: Deploy to prod-gcp
-        uses: nais/deploy/actions/deploy@v1
+      - uses: actions/checkout@v3
+      - uses: nais/deploy/actions/deploy@v1
         env:
           APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
           CLUSTER: prod-gcp
-          RESOURCE: nais-prod.yaml
+          RESOURCE: naiserator-prod.yaml
           VAR: image=${{ needs.build.outputs.image }}
 
   deploy-demo-to-dev-gcp:
     if: github.ref == 'refs/heads/master'
-    name: Deploy to dev-gcp (Demo)
-    needs: build-and-publish
+    name: Deploy to demo dev-gcp
+    needs: build
     runs-on: ubuntu-latest
-    concurrency: deploy-demo-to-dev-gcp
     steps:
-      - uses: actions/checkout@v1
-      - uses: actions/download-artifact@v1
-        with:
-          name: VERSION.txt
-          path: .
-      - run: echo "VERSION=`cat VERSION.txt`" >> $GITHUB_ENV
-      - run: echo "IMAGE=ghcr.io/navikt/$APP:$VERSION" >> $GITHUB_ENV
-      - name: Deploy demo to dev-gcp
-        uses: nais/deploy/actions/deploy@v1
+      - uses: actions/checkout@v3
+      - uses: nais/deploy/actions/deploy@v1
         env:
           APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
           CLUSTER: dev-gcp
