--- a/.github/workflows/deploy-dev.yaml
+++ b/.github/workflows/deploy-dev.yaml
@@ -3,7 +3,7 @@ on: workflow_dispatch
 env:
   NPM_AUTH_TOKEN: ${{ secrets.READER_TOKEN }}
 jobs:
-  build-and-publish:
+  build:
     name: Bygg, test og push Docker image
     runs-on: ubuntu-latest
     permissions:
@@ -55,7 +55,7 @@ jobs:
     outputs:
       image: ${{ steps.docker-build-push.outputs.image }}
 
-  deploy-to-dev-gcp:
+  deploy-dev:
     if: github.ref == 'refs/heads/master'
     name: Deploy to dev-gcp
     needs: build
