--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@navikt/ds-css": "^2.0.1",
-    "@navikt/ds-icons": "^2.0.1",
-    "@navikt/ds-react": "^2.0.1",
-    "@navikt/ds-tokens": "^2.0.1",
+    "@navikt/aksel-icons": "^5.2.1",
+    "@navikt/ds-css": "^5.2.1",
+    "@navikt/ds-react": "^5.2.1",
+    "@navikt/ds-tokens": "^5.2.1",
     "@navikt/nav-dekoratoren-moduler": "^1.8.1",
     "@navikt/next-logger": "^1.18.0",
     "amplitude-js": "^8.18.1",
@@ -16,9 +16,9 @@
     "html-react-parser": "^1.4.12",
     "openid-client": "^5.1.9",
     "pino": "^8.14.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-query": "^3.38.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-query": "^3.39.3",
     "typescript": "~4.6.4"
   },
   "devDependencies": {
@@ -30,23 +30,22 @@
     "@types/react-dom": "^17.0.9",
     "@typescript-eslint/eslint-plugin": "^5.22.0",
     "@typescript-eslint/parser": "^5.22.0",
-    "cypress": "^9.6.0",
+    "autoprefixer": "^10.4.15",
+    "cypress": "^12.17.4",
     "eslint": "^8.14.0",
     "eslint-config-next": "^12.1.6",
-    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-prettier": "^9.0.0",
     "eslint-config-react": "^1.1.7",
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-filename": "^1.0.3",
-    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.5.0",
-    "eslint-plugin-simple-import-sort": "^7.0.0",
-    "less": "^4.1.2",
-    "less-loader": "^10.2.0",
-    "next": "^12.1.6",
-    "next-with-less": "^2.0.5",
-    "prettier": "^2.6.2",
+    "next": "^13.4.19",
+    "postcss": "^8.4.28",
+    "prettier": "^3.0.2",
     "start-server-and-test": "^1.14.0",
+    "tailwindcss": "^3.3.3",
     "ts-loader": "^9.3.0",
     "yet-another-fetch-mock": "^4.1.0"
   },
