--- a/package.json
+++ b/package.json
@@ -57,8 +57,7 @@
     "build": "next build",
     "cy:open": "cypress open",
     "e2e": "start-test dev-ingen-dekorator http://localhost:8080/syk/info/aktivitetsplikt cy:open",
-    "prettier:write": "prettier --write .",
-    "prettier:check": "prettier --check .",
+    "prettier": "prettier --write ./src/**",
     "lint": "eslint --ext=ts,tsx src cypress",
     "lint:fix": "eslint --ext=ts,tsx src cypress --fix",
     "format": "npm run prettier:write && npm run lint:fix"
