--- a/nais/nais-demo.yaml
+++ b/nais/nais-demo.yaml
@@ -7,7 +7,7 @@ metadata:
     team: team-esyfo
 spec:
   image: {{image}}
-  port: 8080
+  port: 3000
   ingresses:
     - "https://demo.ekstern.dev.nav.no/syk/info/"
   tokenx:
@@ -18,8 +18,15 @@ spec:
       enabled: false
   liveness:
     path: syk/info/api/isAlive
+    initialDelay: 20
+    timeout: 5
+    periodSeconds: 5
+    failureThreshold: 30
   readiness:
     path: syk/info/api/isReady
+    initialDelay: 20
+    periodSeconds: 5
+    timeout: 5
   env:
     - name: MOCK_BACKEND
       value: "true"
