Update url to point at meroppfolging-frontend

--- a/.env
+++ b/.env
@@ -5,5 +5,5 @@ SYKEFRAVAER_URL=https://www-gcp.dev.nav.no/syk/sykefravaer
 DITTNAV_URL=https://www.dev.nav.no/person/dittnav/
 DITT_SYKEFRAVAER_URL=https://ditt-sykefravaer.labs.nais.io/syk/sykefravaer
 DECORATOR_ENV=prod
-ARBEIDSSOKERREGISTRERING_URL=https://arbeidssokerregistrering.nav.no/start?fraSykefravaer=true
+MEROPPFOLGING_REGISTRERING_URL=https://www.nav.no/syk/meroppfolging/reg/0
 ESYFOVARSEL_HOST=https://esyfovarsel.dev.intern.nav.no
