Update url for dev

--- a/nais-dev.yaml
+++ b/nais-dev.yaml
@@ -47,7 +47,7 @@ spec:
     - name: NARMESTELEDER_URL
       value: "https://narmesteleder.dev.nav.no"
     - name: MEROPPFOLGING_REGISTRERING_URL
-      value: "https://ekstern.dev.nav.no/syk/meroppfolging/reg/0"
+      value: "https://www.ekstern.dev.nav.no/syk/meroppfolging/reg/0"
     - name: ESYFOVARSEL_HOST
       value: "http://esyfovarsel"
     - name: ESYFOVARSEL_CLIENT_ID
