Change to doublequotes

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,12 +4,7 @@
         "eslint:recommended",
         "plugin:react/recommended"
     ],
-    "plugins": [
-        "react",
-        "@typescript-eslint",
-        "react-hooks",
-        "prettier"
-    ],
+    "plugins": ["react", "@typescript-eslint", "react-hooks", "prettier"],
     "env": {
         "browser": true,
         "jest": true,
@@ -33,7 +28,7 @@
         "react/display-name": 0,
         "arrow-body-style": "off",
         "object-curly-spacing": [2, "always"],
-        "quotes": [2, "single", { "avoidEscape": true }],
+        "quotes": [2, "double", { "avoidEscape": true }],
         "semi": ["error", "never"],
         "sort-imports": "off",
         "import/order": "off",
