--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ OPPLAERING=true
 MOCK_BACKEND=true
 ENVIRONMENT=dev
 SYKEFRAVAER_URL=https://www-gcp.dev.nav.no/syk/sykefravaer
-DITTNAV_URL=https://www.dev.nav.no/person/dittnav/
+MIN_SIDE_URL=https://www.intern.dev.nav.no/minside/
 DITT_SYKEFRAVAER_URL=https://ditt-sykefravaer.labs.nais.io/syk/sykefravaer
 DECORATOR_ENV=prod
 MEROPPFOLGING_REGISTRERING_URL=https://www.nav.no/syk/meroppfolging/reg/0
