--- a/nais-dev.yaml
+++ b/nais-dev.yaml
@@ -40,8 +40,8 @@ spec:
       value: "q1"
     - name: OPPLAERING
       value: "false"
-    - name: DITTNAV_URL
-      value: "https://www.dev.nav.no/person/dittnav/"
+    - name: MIN_SIDE_URL
+      value: "https://www.intern.dev.nav.no/minside/"
     - name: DITT_SYKEFRAVAER_URL
       value: "https://www-gcp.dev.nav.no/syk/sykefravaer"
     - name: NARMESTELEDER_URL
