--- a/nais-prod.yaml
+++ b/nais-prod.yaml
@@ -40,8 +40,8 @@ spec:
       value: "prod"
     - name: OPPLAERING
       value: "false"
-    - name: DITTNAV_URL
-      value: "https://www.nav.no/person/dittnav"
+    - name: MIN_SIDE_URL
+      value: "https://www.nav.no/minside/"
     - name: DITT_SYKEFRAVAER_URL
       value: "https://www.nav.no/syk/sykefravaer"
     - name: NARMESTELEDER_URL
